Deny Unsafe memory access in tests